start building html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expence Tracker</title>
     <link rel="stylesheet" href="index.css">
+
+    <!--  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
   </head>
   <body>
+    <header>
+      <h1>ExpenseTracker</h1>
+    </header>
+    <main>
+      <div>
+        <input type="text" />
+        <input type="number" />
+        <input type="date">
+        <select>
+          <option value="">Food</option>
+          <option value="">Bills</option>
+          <option value="">Car</option>
+        </select>
+        <button>Add Expense</button>
+        <p>Total Spent: $0.00</p>
+      </div>
+      <div></div>
+      <div></div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
