--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <main>
       <div class="add-expense-container">
         <form>
-          <input type="text" id="item" name="item" placeholder="Item" required/>
-          <input type="number" id="amount" name="amount" placeholder="Amount" required/>
-          <select required>
+          <input type="text" id="item" name="item" placeholder="Item" maxlength="30" required/>
+          <input type="text" id="amount" name="amount" placeholder="Amount" required/>
+          <select id="category" name="category" required>
             <option value="" disabled selected>-- select category --</option>
             <option value="housing">Housing</option>
             <option value="utilities">Utilities</option>
@@ -78,7 +78,7 @@
         </select>
       </div>
       <div class="total-spent">
-        <p class="total">Total Spent: $0.00</p>
+        <p class="total" id="total">Total Spent: $0.00</p>
       </div>
       <div class="all-expenses" id="all-expenses">
         <p>Expenses:</p>
