--- a/index.html
+++ b/index.html
@@ -32,49 +32,51 @@
           <input type="text" id="amount" name="amount" placeholder="Amount" required/>
           <select id="category" name="category" required>
             <option value="" disabled selected>-- select category --</option>
-            <option value="housing">Housing</option>
-            <option value="utilities">Utilities</option>
-            <option value="food">Food</option>
-            <option value="transportation">Transportation</option>
-            <option value="health">Health</option>
-            <option value="personal-and-household">Personal & Household</option>
-            <option value="entertainment">Entertainment</option>
-            <option value="travel">Travel</option>
-            <option value="savings-and-investments">Savings & Investments</option>
-            <option value="debt-payments">Debt Payments</option>
-            <option value="education">Education</option>
-            <option value="gifts-and-donations">Gifts & Donations</option>
-            <option value="pets">Pets</option>
-            <option value="kids">Kids</option>
+            <option value="Housing">Housing</option>
+            <option value="Utilities">Utilities</option>
+            <option value="Food">Food</option>
+            <option value="Transportation">Transportation</option>
+            <option value="Health">Health</option>
+            <option value="Personal & Household">Personal & Household</option>
+            <option value="Entertainment">Entertainment</option>
+            <option value="Travel">Travel</option>
+            <option value="Savings & Investments">Savings & Investments</option>
+            <option value="Debt Payments">Debt Payments</option>
+            <option value="Education">Education</option>
+            <option value="Gifts & Donations">Gifts & Donations</option>
+            <option value="Pets">Pets</option>
+            <option value="Kids">Kids</option>
+            <option value="Bills">Bills</option>
           </select>
           <input type="date" id="date" name="date" required>
           <button>Add Expense</button>
         </form>
       </div>
       <div class="filter">
-        <select required>
-          <option value="all-categories">All categories</option>
-          <option value="housing">Housing</option>
-          <option value="utilities">Utilities</option>
-          <option value="food">Food</option>
-          <option value="transportation">Transportation</option>
-          <option value="health">Health</option>
-          <option value="personal-and-household">Personal & Household</option>
-          <option value="entertainment">Entertainment</option>
-          <option value="travel">Travel</option>
-          <option value="savings-and-investments">Savings & Investments</option>
-          <option value="debt-payments">Debt Payments</option>
-          <option value="education">Education</option>
-          <option value="gifts-and-donations">Gifts & Donations</option>
-          <option value="pets">Pets</option>
-          <option value="kids">Kids</option>
+        <select name="category-filter" id="category-filter" required>
+          <option value="All categories">All categories</option>
+          <option value="Housing">Housing</option>
+          <option value="Utilities">Utilities</option>
+          <option value="Food">Food</option>
+          <option value="Transportation">Transportation</option>
+          <option value="Health">Health</option>
+          <option value="Personal & Household">Personal & Household</option>
+          <option value="Entertainment">Entertainment</option>
+          <option value="Travel">Travel</option>
+          <option value="Savings & Investments">Savings & Investments</option>
+          <option value="Debt Payments">Debt Payments</option>
+          <option value="Education">Education</option>
+          <option value="Gifts & Donations">Gifts & Donations</option>
+          <option value="Pets">Pets</option>
+          <option value="Kids">Kids</option>
+          <option value="Bills">Bills</option>
         </select>
-        <select required>
-          <option value="lifetime">Lifetime</option>
-          <option value="one-day">1 day</option>
-          <option value="seven-days">7 days</option>
-          <option value="thirty-days">30 days</option>
-          <option value="ninety-days">90 days</option>
+        <select name="period-filter" id="period-filter" required>
+          <option value="48000">Lifetime</option>
+          <option value="90">90 days</option>
+          <option value="30">30 days</option>
+          <option value="7">7 days</option>
+          <option value="1">1 day</option>
         </select>
       </div>
       <div class="total-spent">
