--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     <main>
       <div class="canvas-wrapper">
-        <button id="export-btn" class="export-btn">
+        <button id="export-btn" class="export-btn" aria-label="click to download a scv sheet of all your expenses to your computer">
           <i id="download-icon" class="fa-solid fa-circle-down fa-2x"></i>
         </button>
         <canvas id="category-chart"></canvas>
